--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,6 @@ propcache==0.3.1
 pycparser==2.22
 pydantic==2.11.2
 pydantic_core==2.33.1
-PyJWT==2.10.1
 pymongo==4.12.0
 PyMuPDF==1.25.5
 pyngrok==7.2.11
@@ -91,7 +90,4 @@ Werkzeug==3.1.3
 XlsxWriter==3.2.2
 yarl==1.20.0
 gunicorn
-Flask
-gunicorn
-supabase==2.15.1
-PyJWT==2.8.0
+PyJWT
