--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,6 @@ isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
-jwt==1.3.1
 lxml==5.3.2
 MarkupSafe==3.0.2
 multidict==6.4.3
@@ -90,4 +89,4 @@ Werkzeug==3.1.3
 XlsxWriter==3.2.2
 yarl==1.20.0
 gunicorn
-PyJWT
+PyJWT==2.8.0
